# Campus-Maintenance-System

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  README.md  pom.xml
cpp-optimization/: CMakeLists.txt  Makefile  README.md
cpp-optimization/include/: jni_bindings.h
cpp-optimization/src/: assignment_algorithm.cpp  assignment_algorithm.h  image_compressor.cpp  image_compressor.h  jni_bindings.cpp  main.cpp
cpp-optimization/tests/: native_tests.cpp
database/schemas/: erd.md  schema.sql
devops/: README.md
devops/docker/: Dockerfile-backend  Dockerfile-frontend
devops/kubernetes/: configmap.example.yaml  deployment.yaml  ingress.example.yaml  persistentvolumeclaim.yaml  secret.example.yaml  service.yaml
documentation/api/: endpoints.md
documentation/architecture/: system-architecture.md
documentation/guides/: deployment-guide.md  email-production-checklist.md  troubleshooting.md
documentation/scripts/: generate_full_documentation.py
frontend/: .env.example  README.md  package-lock.json  package.json  playwright.config.js  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.js
frontend/nginx/: default.conf.template
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/hooks/: use-media-query.js  useNotifications.js  useReducedMotionPreference.js  useTickets.js
frontend/src/pages/: AboutPage.jsx  AcceptInvitePage.jsx  AdminDashboard.jsx  ContactSupportPage.jsx  ForgotPasswordPage.jsx  LandingPage.jsx  LoginPage.jsx  MaintenanceDashboard.jsx  (+7 more)
(+244 files in other folders)
